# Citadel

./: CMakeLists.txt  README.md
database/: admins.csv  books.csv  loans.csv  users.csv
source/: main.c
source/authentification/: auth.c  auth.h
source/authentification/login/: login.c  login.h
source/authentification/register/: register.c  register.h
source/loans/: borrow.c
source/loans/borrow/: borrow.c  borrow.h
source/loans/donate/: donate.c  donate.h
source/loans/return/: return.c  return.h
source/menu/: menu.c  menu.h
source/templates/: templates.h
source/utils/: utils.c  utils.h
source/utils/authentification/: utils.c  utils.h
source/utils/files/: utils.c  utils.h
